# blog

./: .env  Cargo.toml
src/: config.rs  error.rs  form.rs  lib.rs  main.rs  md.rs  model.rs
src/db/: category.rs  mod.rs  paginate.rs  topic.rs
src/handler/: mod.rs
src/handler/backend/: category.rs  index.rs  mod.rs  topic.rs
src/handler/frontend/: index.rs  mod.rs
src/view/backend/: category.rs  index.rs  topic.rs
src/view/frontend/: index.rs
templates/: pagination.html
templates/backend/: base.html  index.html
templates/backend/category/: edit.html  index.html
templates/backend/topic/: add.html  edit.html  index.html  toolbar.html
templates/frontend/: base.html
