[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11.1"
axum = "0.5.16"
bcrypt = "0.13.0"
chrono = "0.4.22"
config = "0.13.2"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
dotenv = "0.15.0"
pulldown-cmark = "0.9.2"
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.7"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
